--- a/ProjetBibliotheque/ProjetBibliotheque.csproj
+++ b/ProjetBibliotheque/ProjetBibliotheque.csproj
@@ -52,10 +52,19 @@
     <Compile Include="FormAdherent.designer.cs">
       <DependentUpon>FormAdherent.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormAuteur.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAuteur.designer.cs">
+      <DependentUpon>FormAuteur.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAdherent.resx">
       <DependentUpon>FormAdherent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAuteur.resx">
+      <DependentUpon>FormAuteur.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
