--- a/ProjetBibliotheque/ProjetBibliotheque.csproj
+++ b/ProjetBibliotheque/ProjetBibliotheque.csproj
@@ -58,6 +58,12 @@
     <Compile Include="FormAuteur.designer.cs">
       <DependentUpon>FormAuteur.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormBibliothecaire.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormBibliothecaire.designer.cs">
+      <DependentUpon>FormBibliothecaire.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAdherent.resx">
@@ -65,6 +71,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormAuteur.resx">
       <DependentUpon>FormAuteur.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormBibliothecaire.resx">
+      <DependentUpon>FormBibliothecaire.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
