--- a/ProjetBibliotheque/ProjetBibliotheque.csproj
+++ b/ProjetBibliotheque/ProjetBibliotheque.csproj
@@ -70,6 +70,12 @@
     <Compile Include="FormEmplacement.designer.cs">
       <DependentUpon>FormEmplacement.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormEmprunt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormEmprunt.designer.cs">
+      <DependentUpon>FormEmprunt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAdherent.resx">
@@ -83,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormEmplacement.resx">
       <DependentUpon>FormEmplacement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormEmprunt.resx">
+      <DependentUpon>FormEmprunt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
