--- a/ProjetBibliotheque/ProjetBibliotheque.csproj
+++ b/ProjetBibliotheque/ProjetBibliotheque.csproj
@@ -76,6 +76,12 @@
     <Compile Include="FormEmprunt.designer.cs">
       <DependentUpon>FormEmprunt.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormGenre.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormGenre.designer.cs">
+      <DependentUpon>FormGenre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAdherent.resx">
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormEmprunt.resx">
       <DependentUpon>FormEmprunt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormGenre.resx">
+      <DependentUpon>FormGenre.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
