--- a/ProjetBibliotheque/ProjetBibliotheque.csproj
+++ b/ProjetBibliotheque/ProjetBibliotheque.csproj
@@ -88,6 +88,12 @@
     <Compile Include="FormLivre.designer.cs">
       <DependentUpon>FormLivre.cs</DependentUpon>
     </Compile>
+    <Compile Include="Identification.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Identification.Designer.cs">
+      <DependentUpon>Identification.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAdherent.resx">
@@ -110,6 +116,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormLivre.resx">
       <DependentUpon>FormLivre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Identification.resx">
+      <DependentUpon>Identification.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
