--- a/ProjetBibliotheque/App.config
+++ b/ProjetBibliotheque/App.config
@@ -5,5 +5,7 @@
   </startup>
   <connectionStrings>
     <add name="BibliothequeEntities" connectionString="metadata=res://*/ModelBibliotheque.csdl|res://*/ModelBibliotheque.ssdl|res://*/ModelBibliotheque.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Bibliotheque;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BibEntities" connectionString="metadata=res://*/ModelBib.csdl|res://*/ModelBib.ssdl|res://*/ModelBib.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Bibliotheque;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BiblioEntities" connectionString="metadata=res://*/ModelBiblio.csdl|res://*/ModelBiblio.ssdl|res://*/ModelBiblio.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Bibliotheque;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
