--- a/ProjetBibliotheque/ProjetBibliotheque.csproj
+++ b/ProjetBibliotheque/ProjetBibliotheque.csproj
@@ -33,10 +33,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data.Entity.EF5, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data.Entity.EF6, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Data.Entity.Design" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Web.Entity" />
+    <Reference Include="System.Web.Entity.Design" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,19 +61,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="adherent.cs">
-      <DependentUpon>ModelBibliotheque.tt</DependentUpon>
+      <DependentUpon>ModelBiblio.tt</DependentUpon>
     </Compile>
     <Compile Include="auteur.cs">
-      <DependentUpon>ModelBibliotheque.tt</DependentUpon>
+      <DependentUpon>ModelBiblio.tt</DependentUpon>
     </Compile>
     <Compile Include="bibliothecaire.cs">
-      <DependentUpon>ModelBibliotheque.tt</DependentUpon>
+      <DependentUpon>ModelBiblio.tt</DependentUpon>
     </Compile>
     <Compile Include="emplacement.cs">
-      <DependentUpon>ModelBibliotheque.tt</DependentUpon>
+      <DependentUpon>ModelBiblio.tt</DependentUpon>
     </Compile>
     <Compile Include="emprunter.cs">
-      <DependentUpon>ModelBibliotheque.tt</DependentUpon>
+      <DependentUpon>ModelBiblio.tt</DependentUpon>
     </Compile>
     <Compile Include="FormAdherent.cs">
       <SubType>Form</SubType>
@@ -106,7 +118,7 @@
       <DependentUpon>FormLivre.cs</DependentUpon>
     </Compile>
     <Compile Include="genre.cs">
-      <DependentUpon>ModelBibliotheque.tt</DependentUpon>
+      <DependentUpon>ModelBiblio.tt</DependentUpon>
     </Compile>
     <Compile Include="Identification.cs">
       <SubType>Form</SubType>
@@ -115,25 +127,28 @@
       <DependentUpon>Identification.cs</DependentUpon>
     </Compile>
     <Compile Include="livre.cs">
-      <DependentUpon>ModelBibliotheque.tt</DependentUpon>
+      <DependentUpon>ModelBiblio.tt</DependentUpon>
     </Compile>
-    <Compile Include="ModelBibliotheque.Context.cs">
+    <Compile Include="ModelBiblio.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ModelBibliotheque.Context.tt</DependentUpon>
+      <DependentUpon>ModelBiblio.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="ModelBibliotheque.cs">
+    <Compile Include="ModelBiblio.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ModelBibliotheque.tt</DependentUpon>
+      <DependentUpon>ModelBiblio.tt</DependentUpon>
     </Compile>
-    <Compile Include="ModelBibliotheque.Designer.cs">
+    <Compile Include="ModelBiblio.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ModelBibliotheque.edmx</DependentUpon>
+      <DependentUpon>ModelBiblio.edmx</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadAdherents_Result.cs">
+      <DependentUpon>ModelBiblio.tt</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FormAdherent.resx">
       <DependentUpon>FormAdherent.cs</DependentUpon>
     </EmbeddedResource>
@@ -167,12 +182,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EntityDeploy Include="ModelBibliotheque.edmx">
+    <EntityDeploy Include="ModelBiblio.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>ModelBibliotheque.Designer.cs</LastGenOutput>
+      <LastGenOutput>ModelBiblio.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="ModelBibliotheque.edmx.diagram">
-      <DependentUpon>ModelBibliotheque.edmx</DependentUpon>
+    <None Include="ModelBiblio.edmx.diagram">
+      <DependentUpon>ModelBiblio.edmx</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -191,15 +206,18 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ModelBibliotheque.Context.tt">
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ModelBiblio.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ModelBibliotheque.edmx</DependentUpon>
-      <LastGenOutput>ModelBibliotheque.Context.cs</LastGenOutput>
+      <DependentUpon>ModelBiblio.edmx</DependentUpon>
+      <LastGenOutput>ModelBiblio.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="ModelBibliotheque.tt">
+    <Content Include="ModelBiblio.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ModelBibliotheque.edmx</DependentUpon>
-      <LastGenOutput>ModelBibliotheque.cs</LastGenOutput>
+      <DependentUpon>ModelBiblio.edmx</DependentUpon>
+      <LastGenOutput>ModelBiblio.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
